feat(api): scaffold Rust API with Axum and core crates
- Add Cargo workspace with 6 crates (api, core, data-sources, technical, fundamental, db)
- Configure Axum web framework with CORS and tracing middleware
- Implement health check and root endpoints
- Add core domain models (Stock, PriceData, StockScore)
- Add scoring engine with composite score calculation
- Update moon.yml with Rust tasks (dev, build, test, lint, fmt)

--- a/apps/api/moon.yml
+++ b/apps/api/moon.yml
@@ -5,3 +5,36 @@ stack: 'backend'
 tags:
   - 'rust'
   - 'api'
+
+dependsOn:
+  - 'core'
+
+tasks:
+  dev:
+    command: 'cargo run'
+    local: true
+    persistent: true
+
+  build:
+    command: 'cargo build --release'
+    inputs:
+      - 'src/**/*'
+      - 'Cargo.toml'
+    outputs:
+      - '../../target/release/jejakcuan-api'
+
+  test:
+    command: 'cargo test'
+    inputs:
+      - 'src/**/*'
+      - 'Cargo.toml'
+
+  lint:
+    command: 'cargo clippy -- -D warnings'
+    inputs:
+      - 'src/**/*'
+
+  fmt:
+    command: 'cargo fmt --check'
+    inputs:
+      - 'src/**/*'
