--- a/apps/ml/moon.yml
+++ b/apps/ml/moon.yml
@@ -5,3 +5,34 @@ stack: 'backend'
 tags:
   - 'python'
   - 'ml'
+
+tasks:
+  dev:
+    command: 'uvicorn jejakcuan_ml.main:app --reload --host 0.0.0.0 --port 8000'
+    options:
+      workingDir: 'src'
+    local: true
+    persistent: true
+
+  test:
+    command: 'pytest'
+    inputs:
+      - 'src/**/*'
+      - 'tests/**/*'
+
+  lint:
+    command: 'ruff check src tests'
+    inputs:
+      - 'src/**/*'
+      - 'tests/**/*'
+
+  fmt:
+    command: 'ruff format --check src tests'
+    inputs:
+      - 'src/**/*'
+      - 'tests/**/*'
+
+  typecheck:
+    command: 'mypy src'
+    inputs:
+      - 'src/**/*'
