--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -6,6 +6,12 @@ edition.workspace = true
 [dependencies]
 sqlx.workspace = true
 tokio.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+chrono.workspace = true
+rust_decimal.workspace = true
 thiserror.workspace = true
+tracing.workspace = true
+dotenvy.workspace = true
 
 jejakcuan-core = { path = "../core" }
