--- a/crates/data-sources/Cargo.toml
+++ b/crates/data-sources/Cargo.toml
@@ -4,7 +4,13 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-serde.workspace = true
 reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+chrono.workspace = true
+rust_decimal.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+tracing.workspace = true
+
+jejakcuan-core = { path = "../core" }
