feat(api): add JWT auth and REST endpoints for stocks/watchlist

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DATABASE_URL=postgres://jejakcuan:jejakcuan_dev@localhost:5432/jejakcuan
 REDIS_URL=redis://localhost:6379
 RUST_LOG=debug
+
+# Auth settings
+JWT_SECRET=your_secure_jwt_secret_here_change_in_production
+AUTH_USERNAME=admin
+# Generate with: cargo run --bin hash-password -- your_password
+AUTH_PASSWORD_HASH=$argon2id$v=19$m=19456,t=2,p=1$your_salt$your_hash
