--- a/crates/technical/Cargo.toml
+++ b/crates/technical/Cargo.toml
@@ -4,7 +4,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-rust_decimal.workspace = true
+rust_decimal = { workspace = true, features = ["serde"] }
+rust_decimal_macros = "1"
+serde.workspace = true
 thiserror.workspace = true
 
 jejakcuan-core = { path = "../core" }
