--- a/crates/technical/Cargo.toml
+++ b/crates/technical/Cargo.toml
@@ -5,6 +5,12 @@ edition.workspace = true
 
 [dependencies]
 rust_decimal.workspace = true
+rust_decimal_macros = "1"
 thiserror.workspace = true
+serde.workspace = true
+chrono.workspace = true
 
 jejakcuan-core = { path = "../core" }
+
+[dev-dependencies]
+approx = "0.5"
