feat(core): implement technical score engine with configurable weights

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -7,4 +7,5 @@ edition.workspace = true
 serde.workspace = true
 chrono.workspace = true
 rust_decimal.workspace = true
+rust_decimal_macros = "1"
 thiserror.workspace = true
