--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,9 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "devDependencies": {
     "@skeletonlabs/skeleton": "^2.10.0",
@@ -17,9 +19,12 @@
     "@sveltejs/adapter-node": "^5.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/svelte": "^5.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.0.0",
     "eslint-plugin-svelte": "^2.0.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.0",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
@@ -27,7 +32,8 @@
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^2.0.0"
   },
   "dependencies": {
     "lightweight-charts": "^4.2.0"
