test(api): add integration tests for REST endpoints
- Added axum-test and tower dev dependencies
- Refactored main.rs to use lib.rs for testable router creation
- Created integration tests for:
  - Root endpoint (/)
  - Health endpoint (/health)
  - 404 handling
- Added unit tests for auth module:
  - Token creation and validation
  - Password hashing and verification
- Database-dependent tests marked with #[ignore]

--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -28,3 +28,7 @@ jejakcuan-data-sources = { path = "../../crates/data-sources" }
 # Additional
 axum-extra = { version = "0.9", features = ["cookie"] }
 time = "0.3"
+
+[dev-dependencies]
+axum-test = "14"
+tower = { version = "0.4", features = ["util"] }
