--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -9,3 +9,6 @@ chrono.workspace = true
 rust_decimal.workspace = true
 rust_decimal_macros = "1"
 thiserror.workspace = true
+
+[dev-dependencies]
+serde_json.workspace = true
