fix(api): escape $ in password hash for dotenvy, add verify command to hash_password

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ REDIS_URL=redis://localhost:6379
 RUST_LOG=debug
 
 # Auth settings
-JWT_SECRET=your_secure_jwt_secret_here_change_in_production
+JWT_SECRET=jejakcuan_dev_secret_change_in_production
 AUTH_USERNAME=admin
-# Generate with: cargo run --bin hash-password -- your_password
-AUTH_PASSWORD_HASH=$argon2id$v=19$m=19456,t=2,p=1$your_salt$your_hash
+# Generate with: cargo run -p jejakcuan-api --bin hash_password
+# NOTE: Escape $ signs with \$ in this file!
+# Default password: admin123
+AUTH_PASSWORD_HASH=\$argon2id\$v=19\$m=19456,t=2,p=1\$UUClS/7VsTvpaxQ9lGW0Og\$1ww9uSwfajq7vz2IZzYOLRlHa0fbdOaeEtE1qtR9VXo
