feat(data-sources): implement PHASE 1 data infrastructure
- Add Sectors.app API client with retry logic and rate limiting
- Add TwelveData WebSocket client for real-time price streaming
- Enhance KSEI shareholding scraper with HTML parsing
- Enhance IDX broker summary scraper with data parsing

All 68+ tests pass.

--- a/crates/data-sources/Cargo.toml
+++ b/crates/data-sources/Cargo.toml
@@ -17,4 +17,9 @@ tracing.workspace = true
 scraper = "0.18"
 rust_decimal_macros = "1"
 
+# WebSocket support
+tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
+futures-util = "0.3"
+url = "2"
+
 jejakcuan-core = { path = "../core" }
