--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -28,6 +28,11 @@ jejakcuan-data-sources = { path = "../../crates/data-sources" }
 # Additional
 axum-extra = { version = "0.9", features = ["cookie"] }
 time = "0.3"
+async-trait = "0.1"
+reqwest = { version = "0.12", features = ["json"] }
+thiserror.workspace = true
+rust_decimal = { workspace = true, features = ["serde"] }
+rust_decimal_macros = "1"
 
 [dev-dependencies]
 axum-test = "14"
