feat(infra): implement PHASE 7 infrastructure
- Add Redis cache crate with connection pooling
- Add cache keys generator for consistent naming
- Add stock-specific cache operations (quotes, scores, broker flow)
- Add SSE streaming routes for real-time updates
- Add broadcast channel for multi-client message distribution
- Kafka/TimescaleDB optimization deferred (require production setup)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "apps/api",
     "crates/core",
+    "crates/cache",
     "crates/data-sources",
     "crates/technical",
     "crates/fundamental",
