--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -33,6 +33,8 @@ reqwest = { version = "0.12", features = ["json"] }
 thiserror.workspace = true
 rust_decimal = { workspace = true, features = ["serde"] }
 rust_decimal_macros = "1"
+futures-util = "0.3"
+tokio-stream = { version = "0.1", features = ["sync"] }
 
 [dev-dependencies]
 axum-test = "14"
