feat(compliance): implement PHASE 9 compliance and production
- Add audit crate with events, logger, and retention modules
- PDP Law compliant retention policies (UU 27/2022)
- Comprehensive audit trail for authentication, data access, security
- Create PDP Law compliance documentation
- Create data handling procedures documentation
- Add production Kubernetes configuration:
  - Namespace, ConfigMaps, Secrets
  - API, Web, ML deployments with HPA
  - PostgreSQL and Redis StatefulSets
  - Ingress with TLS (cert-manager)
  - Network policies for security isolation

Phase 9: 3/3 tasks completed
All phases complete: 31/31 tasks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "apps/api",
+    "crates/audit",
     "crates/core",
     "crates/cache",
     "crates/data-sources",
@@ -50,3 +51,6 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Config
 dotenvy = "0.15"
+
+# Async traits
+async-trait = "0.1"
