--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/adapter-node": "^5.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@tailwindcss/forms": "^0.5.11",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/svelte": "^5.0.0",
     "autoprefixer": "^10.4.0",
