feat(signals): add comprehensive stock analysis API and UI
- Add analysis routes to API: /analysis/:symbol/analysis, /technicals, /broker-flow
- Connect real technical indicators (RSI, MACD, Bollinger) from crates/technical
- Calculate support/resistance levels and Ichimoku cloud positions
- Generate valuation estimates and strategy recommendations
- Update signals page to fetch real data from API instead of mock data
- Add language toggle support (ID/EN)
- Implement proper loading states and error handling

--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -24,6 +24,8 @@ sqlx.workspace = true
 jejakcuan-core = { path = "../../crates/core" }
 jejakcuan-db = { path = "../../crates/db" }
 jejakcuan-data-sources = { path = "../../crates/data-sources" }
+jejakcuan-technical = { path = "../../crates/technical" }
+jejakcuan-fundamental = { path = "../../crates/fundamental" }
 
 # Additional
 axum-extra = { version = "0.9", features = ["cookie"] }
