feat(ml): add Indonesian stock market data scrapers
Add comprehensive scrapers for Indonesian stock market data:

- e-IPO scraper: Upcoming IPO listings from e-ipo.co.id
- IDX scraper: Fundamental data (financial statements, ratios)
- Broker flow scraper: Daily broker buy/sell summary
- Price history scraper: Historical OHLCV data from Yahoo Finance

Features:
- Async HTTP client with rate limiting and retry logic
- PostgreSQL database integration with batch inserts
- CLI tool for running scrapers individually or all at once
- Proper type annotations and comprehensive error handling

Usage:
  python -m jejakcuan_ml.scrapers.cli all --days 60
  python -m jejakcuan_ml.scrapers.cli price BBCA BBRI --days 365

--- a/apps/ml/moon.yml
+++ b/apps/ml/moon.yml
@@ -34,3 +34,23 @@ tasks:
     command: 'mypy src'
     inputs:
       - 'src/**/*'
+
+  scrape:
+    command: 'cd src && python -m jejakcuan_ml.scrapers.cli'
+    options:
+      persistent: false
+
+  scrape-all:
+    command: 'cd src && python -m jejakcuan_ml.scrapers.cli all --days 60'
+    options:
+      persistent: false
+
+  scrape-price:
+    command: 'cd src && python -m jejakcuan_ml.scrapers.cli price --days 365'
+    options:
+      persistent: false
+
+  scrape-broker:
+    command: 'cd src && python -m jejakcuan_ml.scrapers.cli broker --days 30'
+    options:
+      persistent: false
