fix(web): proxy /api to local API in dev

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,1 +1,5 @@
-VITE_API_URL=http://localhost:8080
+# Prefer leaving this unset in dev and rely on Vite proxy for /api.
+# VITE_API_URL=
+#
+# If you need to bypass the proxy (e.g. different host), set the full base URL:
+# VITE_API_URL=http://localhost:8080
