feat(admin): add background job execution for data scrapers
- Add JobManager for async Python scraper execution with status tracking
- Add admin routes for granular data source management
- Add job polling endpoints (/api/admin/jobs, /api/admin/jobs/:id)
- Update frontend to poll job status and show real-time progress
- Support for multiple data source categories (broker, prices, fundamentals, scores)
- Prevent duplicate job execution for same source

--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -37,6 +37,7 @@ rust_decimal = { workspace = true, features = ["serde"] }
 rust_decimal_macros = "1"
 futures-util = "0.3"
 tokio-stream = { version = "0.1", features = ["sync"] }
+uuid = { workspace = true, features = ["v4"] }
 
 [dev-dependencies]
 axum-test = "14"
